# socks

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
src/consts/: mod.rs
src/socks/: handlers.rs  methods.rs  mod.rs  replies.rs  requests.rs  traits.rs  udp.rs  utils.rs
src/socks/udp/: mod.rs  requests.rs
