[package]
name = "socksproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "*"
thiserror = "1"
anyhow = "1.0"